fixed spacing and add a small body copy link font size to decoder for fine print

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1605,6 +1605,9 @@ body {
   padding-top: rem-calc(12);
   margin: 0;
 }
+p.body-copy__small a {
+  font-size: 12px;
+}
 .body-copy__small-details {
   font-weight: 300;
   font-size: 12px;
